@@ -169,6 +169,8 @@ YAML::XS                                       = 0
 
 [Author::Plicease::OSPrereqsNot / MSWin32]
 Yars                                           = 0
+App::cpangitify                                = 0
+WWW::Bugzilla::BugTree                         = 0
 
 ;[Author::Plicease::OSPrereqsNot / cygwin]
 
